syntax="proto3";
package dataFormat;

option go_package = "";
import "google/protobuf/any.proto";

message Message {
  string Type = 1;
  int64 Totalfeatures = 2;
  repeated Features features = 3;
  Crs crs = 4;
}

message Features {
  string Type = 1;
  string ID = 2;
  Geometry geometry = 3;
  string GeometryName = 4;
  repeated Properties properties = 5;

}

message Geometry {
  string Type = 1;
  repeated float Coordinates = 2;
}


message Properties {
  int64 Objectid = 1;
  string Address = 2;
  int32 Bezirk = 3;
  string City = 5;
  string Countrycode  = 6;
  string Designation = 7;
  int32 Directpayment = 8;
  string Evseid = 9;
  int64 HubjectCompatible = 10;
  string Operatorname = 11;
  string Source = 12;
  google.protobuf.Any SeAnnoCadData = 13;
}

message Crs{
  string Type = 1;
  CrsProperties crsproperties = 2;
}

message CrsProperties {
  string Name = 1;
}

